--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Main
 title:            ZennoExtensions
 tagline:          'A Jekyll theme'
-description:      'Библиотека для <a href="http://zennolab.com/ru/products/zennoposter/" target="_blank">ZennoPoster</a>'
+description:      '1Библиотека для <a href="http://zennolab.com/ru/products/zennoposter/" target="_blank">ZennoPoster</a>'
 url:              "https://github.com/ZennoDev/ZennoExtensions.Site"
 baseurl:          ""
 
