--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Main
 title:            ZennoExtensions
 tagline:          'A Jekyll theme'
-description:      '1Библиотека для <a href="http://zennolab.com/ru/products/zennoposter/" target="_blank">ZennoPoster</a>'
-url:              "https://github.com/ZennoDev/ZennoExtensions.Site"
+description:      'Библиотека для <a href="http://zennolab.com/ru/products/zennoposter/" target="_blank">ZennoPoster</a>'
+url:              "https://zennodev.github.io/ZennoExtensions.Site"
 baseurl:          ""
 
 # Settings
