--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:            ZennoExtensions
 tagline:          'A Jekyll theme'
 description:      'Библиотека для <a href="http://zennolab.com/ru/products/zennoposter/" target="_blank">ZennoPoster</a>'
 url:              "https://zennodev.github.io/ZennoExtensions.Site"
-baseurl:          ""
+baseurl:          "https://zennodev.github.io/ZennoExtensions.Site"
 
 # Settings
 markdown:         kramdown
