--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Main
 title:            ZennoExtensions
 description:      'Библиотека для <a href="http://zennolab.com/ru/products/zennoposter/" target="_blank">ZennoPoster</a>'
-url:              "https://zennodev.github.io/ZennoExtensions.Site/"
-baseurl:          "https://zennodev.github.io/ZennoExtensions.Site/"
+url:              "zennoextensions.ru"
+baseurl:          "zennoextensions.ru"
 
 # Settings
 markdown:         kramdown
