--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ highlighter:      rouge
 
 plugins:
                   - jekyll-feed
+                  - jekyll-redirect-from
 
 # Sidebar
 sidebar_start_link:   '/start'
